2003-02-18  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (INCLUDES): removed, not needed here.

2003-02-17  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c: slightly modified the partyline UI. Added the
	ability to join channels by just double-clicking in the channel list.
	(partyline_page_new): added two informative labels.
	(channel_activated): new callback for the "row-activated" signal in
	the channel list.
	(partyline_joining_channel): new function to update the label that
	shows your current channel.
	
	* src/partyline.h: added the new function declaration.
	
	* src/tetrinet.c (tetrinet_inmessage): update the new channel label.

2003-02-15  Dani Carbonell  <bocata@panete.net>

	* TODO: updated.

2003-02-14  James Antill  <james@and.org>

	* src/client.c (client_disconnect): Fix crash on exit, when connected.

2003-02-14  Dani Carbonell  <bocata@panete.net>

	* src/client.c: a few fixes in error handling.
	
	* src/gtetrinet.h: fixed a couple of function declarations.
	
	* src/partyline.c: added the channel_list widget.
	(partyline_page_new): added the new widget.
	(partyline_add_channel): new function that will add a channel to the
	list of available channels.
	(copy_item): function that will copy a item of the work_model to the
	actual model of the tree_view.
	(stop_list): new function that will be called then all the markers
	are sended back to us.
	(partyline_update_list): function to be called if you want to update
	the channel list.
	(partyline_more_channel_lines): new function that will be called if
	there are more channels waiting to be listed.
	(partyline_clear_list_channel): new function that will clear the
	list channel.
	
	* src/partyline.h: added the new function declarations.
	
	* src/tetrinet.c: install the channel list refresh signal, and parse
	the incoming messages when appropiate.
	(tetrinet_inmessage): install the signal when connecting. Refresh
	the channel list when the user completes the connection protocol.